@@ -19,6 +19,7 @@ NEW: [features/enhancements]
 +Add Copy Filename option to tab menu (patch from Michael Rans)
 +Extend Vi emulation mode to support motions for Enter, Space, and Backspace
 +Improve file type detection for files that don't have file extensions.
++Add support for Cilk syntax highlighting (patch from michael.champigny)
 
 BUG FIXES:
 +Fix Python 2.5 compatibility issue.
